- virtual thread for fetching download details